# xo-mcp-server

./: .dockerignore  .gitignore  CHATGPT_CONNECTOR_SETUP.md  CURSOR_MCP_SETUP.md  DEPLOYMENT.md  Dockerfile  README.md  SSE_IMPLEMENTATION.md  deploy.sh  deployment_config.json  pyproject.toml  server.py  test_sse.py
src/xo_mcp_server/: __init__.py  web_server.py  xo_mcp_server.py
