[project]
name = "xo-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Seemant Tripathi", email = "tripathiseemant766@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
xo-mcp-server = "xo_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
